<?php die(); ?>
Akeeba Panopticon 1.2.0
================================================================================
+ WordPress support [gh-38]
+ Much improved Docker support [gh-697]
+ Translatable dates
+ Load TinyMCE translations
+ Batch processing sites
# [LOW] Wrong message about not having Akeeba Backup installed shown when adding a new site [gh-661]
# [LOW] Wrong language in mail Blade templates [gh-658]
# [LOW] Groups for disabled sites may not be displayed in the Sites admin page
# [MEDIUM] MaxExec task throws fatal exception when tasks are executed over the web
# [LOW] Connection doctor: sometimes ends up with an error page instead of showing what is going on with the connection
# [LOW] High CPU usage warning when the server does not report CPU usage at all

Akeeba Panopticon 1.1.3
================================================================================
# [HIGH] Cannot update to new Joomla! version if "only minor" update strategy is selected.

Akeeba Panopticon 1.1.2
================================================================================
~ Long PHP version is now truncated in Dashboard view
~ Better compatibility with some ancient MySQL versions
# [HIGH] Database installation errors are not communicated at installation time
# [HIGH] Panopticon database backups on Windows are empty [gh-552]
# [HIGH] Canceling causes a PHP error for some user groups [gh-583]
# [HIGH] Premature auto-start of the session
# [MEDIUM] Dashboard doesn't load if a site doesn't report its CMS version
# [MEDIUM] The SSL/TLS expiration task would fail on MariaDB [gh-562]
# [LOW] The default .htaccess causes the ACE Editor to throw a JavaScript console warning [gh-561]

Akeeba Panopticon 1.1.1
================================================================================
+ Send scheduled reports to specific groups [gh-521]
~ Connection doctor: detect Akeeba Backup Core for Joomla! 3
~ Improve the X-Mailer and Reply-To headers in sent emails