@@ -1543,6 +1543,8 @@ PANOPTICON_BACKUPTASKS_LBL_SELECT_MANUAL="– Χειροκίνητο –"
 PANOPTICON_BACKUPTASKS_LBL_MANUAL_NO="Προγραμματισμένο"
 PANOPTICON_BACKUPTASKS_LBL_MANUAL_YES="Χειροκίνητο"
 PANOPTICON_BACKUPTASKS_LBL_VIEW_MANUAL="Λίστα μη αυτόματων αντιγράφων ασφαλείας"
+PANOPTICON_BACKUPTASKS_LBL_EMAIL_SUCCESS="Αποστολή Μηνύματος Ηλεκτρονικού Ταχυδρομείου μετά την Επιτυχία"
+PANOPTICON_BACKUPTASKS_LBL_EMAIL_FAIL="Αποστολή Μηνύματος Ηλεκτρονικού Ταχυδρομείου μετά την Αποτυχία"
 PANOPTICON_SCANNERTASKS_TITLE="Εργασίες Σαρωτή Αλλαγών Αρχείων PHP"
 PANOPTICON_SCANNERTASKS_TITLE_NEW="Νέο Πρόγραμμα Σάρωσης"
 PANOPTICON_SCANNERTASKS_TITLE_EDIT="Επεξεργασία Προγράμματος Σάρωσης"
