@@ -1614,6 +1614,8 @@ PANOPTICON_BACKUPTASKS_LBL_SELECT_MANUAL="– Manual –"
 PANOPTICON_BACKUPTASKS_LBL_MANUAL_NO="Scheduled"
 PANOPTICON_BACKUPTASKS_LBL_MANUAL_YES="Manual"
 PANOPTICON_BACKUPTASKS_LBL_VIEW_MANUAL="List Manual Backups"
+PANOPTICON_BACKUPTASKS_LBL_EMAIL_SUCCESS="Send email on success"
+PANOPTICON_BACKUPTASKS_LBL_EMAIL_FAIL="Send email on failure"
 
 [Scanner Tasks]
 PANOPTICON_SCANNERTASKS_TITLE="PHP File Change Scanner Tasks"
