@@ -6,6 +6,7 @@ Akeeba Panopticon 1.2.0
 + Translatable dates
 + Load TinyMCE translations
 + Batch processing sites
++ Control email sending for scheduled backups [gh-712]
 # [LOW] Wrong message about not having Akeeba Backup installed shown when adding a new site [gh-661]
 # [LOW] Wrong language in mail Blade templates [gh-658]
 # [LOW] Groups for disabled sites may not be displayed in the Sites admin page
